Send choosen car to store.js

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -5,3 +5,12 @@ $background: LightSteelBlue;
   justify-content: center;
   align-items: center;
 }
+
+.btn {
+  text-decoration: none;
+  display: inline-block;
+  background: Silver;
+  color: White;
+  padding: 1rem;
+  margin: 1rem;
+}
