Css on bookings and admin

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 $background: LightSteelBlue;
+$ghost: rgba($color: White, $alpha: .8);
 $text: 'Fira Sans';
 
 %center {
