fixed user bookings and fixed css in bookings

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -15,6 +15,7 @@ $text: 'Fira Sans';
   background: Azure url('../assets/background.jpg') no-repeat top;
   background-attachment: fixed;
   background-size: 100%;
+  background-size: cover;
 }
 
 .btn {
